# new-buddy-please

./: AGENTS.md  README.md  buddy_reroll.py  pyproject.toml
buddyreroll/: __init__.py  cli.py  core.py  install.py
docs/: README-STANDARD.md  README-template.md
tests/: test_core.py  test_install.py
